# geo-audit-adk

./: .env.example  CLAUDE.md  README.md  SPEC.md  pyproject.toml
.github/workflows/: audit.yml  ci.yml
docs/: DEV.md  OPENSTANDBOX.md  SETUP.md
src/geo_audit_agent/: __init__.py  agent.py  config.py  main.py
src/geo_audit_agent/skills/: __init__.py  content_analyzer.py  geo_metrics.py  platform_checker.py  schema_validator.py  technical_scanner.py
src/geo_audit_agent/subagents/: __init__.py  ai_visibility.py  content_quality.py  platform_readiness.py  schema_markup.py  technical_seo.py
src/geo_audit_agent/tools/: __init__.py  adk_tools.py  fetch_tools.py  pdf_tools.py  sandbox_tools.py
tests/: conftest.py  test_agent.py  test_subagents.py  test_tools.py
